# pyhex

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/pyhex/: __main__.py  app.py  config.py  hex_geometry.py  state.py  tileset.py
src/pyhex/tools/: _flood.py  eraser.py  fill.py  noise.py  pencil.py  picker.py
src/pyhex/views/: editor.py  file_browser.py  overview.py  palette.py  toolbar.py
tests/: test_hex_geometry.py  test_tileset.py
